[package]
name = "hello-stm"
version = "0.1.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly", "defmt", "stm32f411re", "memory-x", "time-driver-any"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]
